# DownsideIQ

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt
.claude/: launch.json
config/: data_sources.yaml  event_playbook.yaml  model_config.yaml  risk_limits.yaml  settings.yaml  thresholds.yaml  tickers.yaml
deploy/: Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DATA_PIPELINE.md  IMPLEMENTATION_PLAN.md  MODELING.md  PRODUCT_SPEC.md  RISK_ENGINE.md
src/: cli.py  pipeline.py
src/agents/: company_news_agent.py  fundamentals_agent.py  macro_news_agent.py  market_context_agent.py  price_trend_agent.py
src/api/: app.py  schemas.py
src/backtesting/: attribution.py  metrics.py  walk_forward.py
src/core/: config.py  errors.py  logging.py  time.py
src/dashboard/: app.py
src/db/: models.py  repositories.py  session.py
src/domain/: features.py  predictions.py
src/features/: feature_builder.py  fundamental_features.py  market_context_features.py  news_features.py  price_features.py  volatility_features.py
src/models/: downside_classifier.py  ensemble_engine.py  quantile_model.py  registry.py  target_builder.py  training.py  volatility_model.py
src/news/: gemini_scorer.py  heuristic_scorer.py  schema.py  scorer.py  search.py
src/pipeline/: orchestrator.py
src/tasks/: jobs.py  (+1 more)
tests/: conftest.py  test_config.py  test_data_collection.py  test_decision.py  test_features.py  test_models.py  test_news.py  test_no_leakage.py  test_risk_models.py  test_trading.py
web/: app.js  index.html  styles.css
(+33 files in other folders)
