[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "downsideiq"
version = "0.1.0"
description = "Live short-horizon equity downside-risk and signal engine."
requires-python = ">=3.10"

[tool.pytest.ini_options]
# Make project root importable so `import src...` and `from main import main` work.
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools]
packages = ["src"]
